Upgrade to alpine 3.8 and fix dependencies

--- a/alpine/collins-cli/Dockerfile
+++ b/alpine/collins-cli/Dockerfile
@@ -1,8 +1,8 @@
-FROM alpine:3.7
+FROM alpine:3.8
 
 MAINTAINER Jeremy Brockett
 
-RUN apk add --no-cache ruby-json ruby-io-console && \
+RUN apk add --no-cache ruby ruby-json ruby-io-console ruby-bigdecimal ruby-etc && \
     gem install --no-rdoc --no-ri collins-cli
 
 ENTRYPOINT ["collins"]
